fixing  clipping for menu page. some element that I didn't manage to find had a width larger than vw, I fixed it by targeting all elements with the max-width property

--- a/css/events.css
+++ b/css/events.css
@@ -12,66 +12,76 @@
     --scrollbar-color: transparent; /* Scrollbar color */
   }
   
-  * {
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    background-color: var(--primary-color);
-  }
+* {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  h2 {
-    font-family: "El Messiri", sans-serif;
-    font-size: 20px;
-    padding-top: 60px;
-    text-align: center;
-  }
-  * {
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+  background-color: var(--primary-color);
+}
+
+h2 {
+  font-family: "El Messiri", sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+* {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .box {
     display: flex;
-    align-items: center; 
-    border: 2px solid #020a07; 
-    padding: 1px; 
-    border-radius: 12px; 
+    border: 2px solid #020a07;
+    border-radius: 12px;
+    height: 210px; 
     max-width: 800px; 
     margin: 60px auto; 
     background-color: #ffedd2;
 } 
 
-.box-image {
-    width: 200px; 
-    height: auto; 
-    margin-right: 10px; 
-    border-radius: 0px; 
-    clip-path: polygon(0 0, 80% 1%, 100% 100%, 0% 100%);
+.img-container {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 210px;
+  clip-path: polygon(0 0, 80% 1%, 100% 100%, 0% 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  flex: 1;
+}
+
+#boardgame-img {
+  background-image: url(../resources/boardgames.jpg);
+}
+
+#karaoke-img {
+  background-image: url(../resources/karaoke.jpg);
+}
+
+#astrology-img {
+  background-image: url(../resources/facebook\ background.png);
 }
 
 .box-text {
-    flex: 1; 
-}
-
-.box-text h2 {
-    margin: 0 0 10px 0; 
-    font-size: 1.5rem;
+  padding: 10px;
+  flex: 1; 
 }
 
 .box-text p {
-    margin: 0; 
-    font-size: 1rem;
-    line-height: 1.5; 
+  font-size: 12px;
 }
+
 .content{
     padding-top: 80px;
 }
 h1{
     text-align: center; /* Center the heading text */
     margin-bottom: 20px;
-   color: #ffedd2;
+    color: #ffedd2;
 }
 
