--- a/css/home.css
+++ b/css/home.css
@@ -227,146 +227,6 @@ section:not(.story, .hero) {
   right: 12px;
 }
 
-/* Navbar Styles */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(39, 37, 37, 0.7);
-  backdrop-filter: blur(3px);
-  padding: 10px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-  box-sizing: border-box;
-  height: 60px;
-}
-
-.brand-logo img {
-  width: 160px;
-  height: auto;
-  padding-left: 40px;
-}
-
-.language-selector {
-  margin-right: 2px;
-}
-
-.language-selector select {
-  padding: 5px;
-  font-size: 1rem;
-  border: none;
-  border-radius: 4px;
-  background-color: var(--select-bg-color);
-  color: var(--secondary-color);
-}
-
-/* Hamburger Menu */
-.toggle-button {
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
-}
-
-.toggle-button .bar {
-  height: 3px;
-  width: 100%;
-  background-color: var(--secondary-color);
-  border-radius: 10px;
-}
-
-/* Navbar Links */
-.navbar-links {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.navbar-links.active {
-  display: flex;
-  position: absolute;
-  top: 60px;
-  left: 0;
-  width: 100%;
-  background-color: var(--navbar-bg-color);
-  flex-direction: column;
-}
-
-.navbar-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
-
-.navbar-links ul li {
-  margin-left: 20px;
-}
-
-.navbar-links ul li a {
-  text-decoration: none;
-  color: var(--secondary-color);
-  font-size: 1rem;
-}
-
-.navbar-links ul li a:hover {
-  color: var(--navbar-link-hover-color);
-}
-
-.content {
-  padding-top: 70px;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-@media (max-width: 768px) {
-  .toggle-button {
-    display: flex;
-    display: flex;
-  }
-
-  .navbar-links {
-    display: none;
-    width: 100%;
-    display: none;
-    width: 100%;
-  }
-
-  .navbar-links ul {
-    flex-direction: column;
-    width: 100%;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .navbar-links ul li {
-    text-align: center;
-    width: 100%;
-    margin: 10px 0;
-    text-align: center;
-    width: 100%;
-    margin: 10px 0;
-  }
-
-  .navbar-links ul li a {
-    font-size: 1.2rem;
-    padding: 10px;
-    display: block;
-    font-size: 1.2rem;
-    padding: 10px;
-    display: block;
-  }
-
-  .navbar-links.active {
-    display: flex;
-    display: flex;
-  }
-}
-/*end navbar css */
-
 /* Story section styles */
 .story {
   text-align: center;
