--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 100vw;
 }
 
 :root {
@@ -22,9 +23,10 @@
     --scrollbar-color: transparent; /* Scrollbar color */
 }
 
-.body{
+body{
     background-image: url("../resources/menu_page_bck.png");
-    background-repeat: repeat;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 /*-----------Today's Special------------*/
@@ -49,6 +51,7 @@
     left: 30%;
     font-size: 30px;
     text-shadow: 0 4px 4px rgba(0,0,0,0.6);
+    width: 250px;
 }
 .td-special-box{
     display: flex;
@@ -78,6 +81,7 @@
     left: 86%;
     top: -20%;
     text-shadow: 0 4px 4px rgba(0,0,0,0.6);
+    width: 50px;
 }
 .td-special-box p{
     position: relative;
@@ -192,6 +196,7 @@
     color: var(--secondary-color);
     font-size: 18px;
     text-shadow: 0 4px 4px rgba(0,0,0,0.6);
+    max-width: 100vw;
 }
 
 .croissant-box{
